# mercury-api-hs

./: CHANGELOG.md  README  mercury-api-hs.cabal
.github/workflows/: ci.yml
src/Web/Mercury/: API.hs  Client.hs
