cabal-version:      3.4
name:               mercury-api-hs
version:            0.1.0.0
synopsis:           A client library for the Mercury Bank API
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Web.Mercury.API
                      Web.Mercury.Client
    -- other-modules:
    -- other-extensions:

    build-depends:    base ^>=4.20.0.0,
                      containers,
                      text,
                      bytestring,
                      mtl,
                      aeson,
                      time,

                      -- Network
                      servant,
                      servant-client >= 0.20,
                      http-client,
                      http-client-tls,

    hs-source-dirs:   src
    default-language: GHC2024
